kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prs-deployment
spec:
  template:
    spec:
      containers:
      - name: prs
        imagePullPolicy: IfNotPresent
