kustomize/overlays/prod/geoserver_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prs-geoserver
  labels:
    app: prs-geoserver-prod
spec:
  selector:
    matchLabels:
      app: prs-geoserver-prod
  template:
    metadata:
      labels:
        app: prs-geoserver-prod
    spec:
      containers:
      - name: prs-geoserver
        volumeMounts:
          - mountPath: /data/geoserver
            name: prs-geoserver-data
      volumes:
        - name: prs-geoserver-data
          persistentVolumeClaim:
            claimName: prs-geoserver-data-prod
