kustomize/overlays/prod/typesense_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prs-typesense
  labels:
    app: prs-typesense
spec:
  selector:
    matchLabels:
      app: prs-typesense
  template:
    metadata:
      labels:
        app: prs-typesense
    spec:
      containers:
      - name: prs-typesense
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /data
            name: prs-typesense-data
      volumes:
        - name: prs-typesense-data
          persistentVolumeClaim:
            claimName: prs-typesense-data-prod
