kustomize/overlays/prod/geoserver_headless_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prs-geoserver
spec:
  selector:
    app: prs-geoserver
    variant: prod
