kustomize/overlays/prod/geoserver_service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prs-geoserver-clusterip
spec:
  selector:
    app: prs-geoserver-prod
    variant: prod
