kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prs-clusterip
spec:
  type: ClusterIP
  selector:
    app: prs-deployment
    variant: prod
---
apiVersion: v1
kind: Service
metadata:
  name: prs-typesense
spec:
  selector:
    app: prs-typesense
    variant: prod
