kustomize/overlays/prod/typesense_service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: prs-typesense
spec:
  selector:
    app: prs-typesense
    variant: prod
