kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prs-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prs.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prs-clusterip-prod
            port:
              number: 8080
